# pypeline-functions

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yaml
config/: freetds.conf  obdcinst.ini
functions/: GCStoBigQuery.py  MSSQLtoGCS.py  extract_google_takeout_seed.py  extract_spotify_seed.py  gcs_jsonl-to-bigquery.py  google_takeout_seed-to-bigquery.py  spotify_seed-to-bigquery.py  spotify_seed-to_bigquery.py
functions/models/: google_takeout.py  spotify.py
functions/parsers/: json_parser.py
functions/sources/: google_takeout_seed.py  spotify_seed.py
functions/utils/: google_cloud_storage.py
functions/utils/sources/: mssql.py
functions/utils/targets/: bigquery.py  google_cloud_storage.py
pipelines/: currency_beacon_to_s3.py
pypeline_functions/: __init__.py  extract_google_takeout_seed.py  extract_spotify_seed.py  google_takeout_seed_to_bigquery.py  rss_feed_to_postgres.py  spotify_seed_to_bigquery.py
pypeline_functions/ctu_relational/: ctu_relational_to_postgres.py
pypeline_functions/google_takeout/: __init__.py  extract_google_takeout_seed.py  google_takeout_seed_to_bigquery.py  google_takeout_seed_to_postgres.py  parsers.py  sources.py
pypeline_functions/models/: __init__.py
pypeline_functions/open_alex/: sources.py
pypeline_functions/parsers/: json_parser.py
pypeline_functions/rss/: models.py  rss_feed_to_postgres.py  sources.py
pypeline_functions/sources/: __init__.py  google_takeout_seed.py  spotify_seed.py
pypeline_functions/spotify/: __init__.py  extract_spotify_seed.py  parsers.py  sources.py  spotify_seed_to_bigquery.py  spotify_seed_to_postgres.py
pypeline_functions/utils/: __init__.py  google_cloud_storage.py  storage.py
src/google_takeout/: parsers.py
src/infolio/: __init__.py
src/infolio/apis/: __init__.py
src/infolio/apis/financial/: __init__.py  alpaca.py  currency_beacon.py
src/infolio/connectors/: __init__.py
src/infolio/connectors/cloud_storage/: __init__.py  google_drive.py  google_sheets.py  s3.py
src/infolio/connectors/databases/: __init__.py  clickhouse.py
src/infolio/transformations/: __init__.py  json.py  schema.py
src/infolio/utils/: __init__.py  api.py  auth_handlers.py  logger.py  secret_manager.py
