[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolio"
version = "0.1.0"
description = "A data pipeline framework for collecting publicly available information."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.11"
keywords = [
    "data pipelines",
    "ELT",
    "ETL",
    "info",
    "folio",
]
authors = [{name = "Miguel Habana", email = "mighabana@gmail.com"}]
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.0",
    "tenacity>=9.1.0",
    "polars>=1.32.0",
    "colorama>=0.4.6",
    "python-json-logger>=4.0.0",
    "boto3>=1.42.40",
    "pyarrow>=21.0.0",
    "openpyxl>=3.1.0",
    "google-auth>=2.48.0",
    "google-api-python-client>=2.188.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "gspread-formatting>=1.2.1",
    "clickhouse-connect>=0.10.0",
]

# list of possible classifiers: https://pypi.org/classifiers/
classifiers = [ 
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "memray",
    "pytest",
    "pytest-cov",
    "mypy"
]

[tool.hatch.build]
sources = ["src"]
include = [
    "/src",
    "README.md"
]
exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.log",
    "dist/",
    "build/",
    "tests/",
    ".git/",
    ".venv/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "*.tmp",
    "*.bak",
]

[tool.hatch.build.targets.wheel]
include = [
    "/src",
]

[tool.ruff]
line-length = 120
lint.pylint.max-nested-blocks=10
lint.extend-select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    # Remove BLE for now until I learn better exception handling
    # "BLE",
    "B",
    "A",
    "C4",
    "DTZ",
    "EXE",
    "ISC",
    "ICN",
    "Q",
    "ARG",
    # Review TODO and FIXME tag usage
    # "TD", "FIX",
    "PD",
    "PL",
    "NPY",
    "RUF"
]
lint.ignore = [
    # Ignore docstring in public module
    "D100",
    # Ignore `self` and `cls` type annotations
    "ANN101", "ANN102",
    # Ignore checks for the `assert` keyword
    "S101", 
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore argument clount limit
    "PLR0913",
    # Ignore generic `df` variable name for DataFrames
    "PD901",
    # Ignore mixed variable case for class scope
    "N815",
    # Ignore because of conflicts with the ruff formatter
    "ISC001",
]

lint.pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104", "E402"]

# Additional configurations should include unit testing and test coverage (see pytest and pytest-cov respectively)
